--- a/i3/config
+++ b/i3/config
@@ -223,4 +223,5 @@ exec --no-startup-id /usr/bin/steam
 exec --no-startup-id /snap/bin/telegram-desktop -startintray
 exec --no-startup-id /usr/bin/birdtray
 exec --no-startup-id /usr/bin/blueman-applet
-exec --no-startup-id /usr/bin/feh --bg-fill ~/Pictures/wallpaper/wallhaven-508096.jpg ~/Pictures/wallpaper/v2-f21709dbcbb040657b1df70e49943b54_r.jpg
+exec --no-startup-id /usr/bin/feh --bg-fill ~/Pictures/wallpaper/wallhaven-508096.jpg 
+# ~/Pictures/wallpaper/v2-f21709dbcbb040657b1df70e49943b54_r.jpg
