--- a/i3/config
+++ b/i3/config
@@ -63,6 +63,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec xfce4-terminal
+# other options
 #bindsym $mod+Return exec i3-sensible-terminal
 #bindsym $mod+Return exec alacritty
 
